style: fix scrollbar

--- a/modulo4/ex003/mq003/styles/style.css
+++ b/modulo4/ex003/mq003/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  width: 100vw;
+  max-width: 768px;
   height: 100vh;
 }
 
@@ -32,6 +32,7 @@ h1 {
   width: 100vw;
   padding: 8px;
   cursor: pointer;
+  width: 100%;
 }
 
 #burguer:hover {
@@ -84,6 +85,7 @@ main p {
 @media screen and (min-width: 768px) {
   html {
     width: 100%;
+    max-width: 100%;
   }
 
   menu {
